--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&family=Inter:wght@100;300,500" rel="stylesheet" type="text/css" />
 
     <script src="https://kit.fontawesome.com/1acb04dda3.js" crossorigin="anonymous"></script>
-    <title>Opsera Free Trial</title>
+    <title>Opsera | CI/CD Orchestration Platform and DevOps Intelligence</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
