--- a/public/loading.html
+++ b/public/loading.html
@@ -23,7 +23,7 @@
             position: fixed;
             top: calc(50% + 8px);
             left: calc(45% + 60px);
-            font-family: 'Lato', sans-serif;
+            font-family: 'Inter', sans-serif;
             font-weight: 400;
             font-size: 20px;
         }
