--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self' *.opsera.io localhost:* *.fontawesome.com https://fonts.googleapis.com *.okta.com *.oktapreview.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' *.fontawesome.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: *.opsera.io; font-src 'self' data: *.opsera.io data: localhost:* *.fontawesome.com https://fonts.gstatic.com;">
+          content="default-src 'self' *.opsera.io localhost:* *.fontawesome.com https://www.youtube.com https://fonts.googleapis.com *.okta.com *.oktapreview.com wss://localhost:* ws://localhost:* wss://*.opsera.io ws://*.opsera.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' *.fontawesome.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: *.opsera.io; font-src 'self' data: *.opsera.io data: localhost:* *.fontawesome.com https://fonts.gstatic.com;">
     <link rel="icon" href="favicon.ico"/>
     <base href="/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&family=Inter:wght@100;300,500" rel="stylesheet" type="text/css" />
 
     <script src="https://kit.fontawesome.com/1acb04dda3.js" crossorigin="anonymous"></script>
-    <title>Opsera Portal</title>
+    <title>Opsera | CI/CD Orchestration Platform and DevOps Intelligence</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
